--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "identification",
     "card",
     "identity",
-    "verification"
+    "verification",
+    "mrz",
+    "pdf417",
+    "aamva"
   ],
   "author": "ID Analyzer <support@idanalyzer.com> (https://www.idanalyzer.com/)",
   "license": "MIT",
