--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "bugs": {
     "url": "https://github.com/idanalyzer/id-analyzer-nodejs/issues"
   },
-  "homepage": "https://github.com/idanalyzer/id-analyzer-nodejs#readme",
+  "homepage": "https://www.idanalyzer.com/",
   "dependencies": {
     "axios": "^0.21.1"
   }
